--- a/usuario/templates/usuario/Pagina1.html
+++ b/usuario/templates/usuario/Pagina1.html
@@ -50,7 +50,15 @@
 </head>
 
 <body>
+
+  <body>
+    <header>
+      <div class="container-fluid">
+        <img src="{% static 'usuario\img\bajonea-logo.jpg' %}" alt="logo" > <!-- Imagen del logo usando la etiqueta 'static' de Django -->
+      </div>
   <!-- Navbar -->
+
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand blink" href="{% url 'Pagina1' %}">BAJONEA</a>
